# svg-simplify

./: .gitignore  README.md  stack.yaml  svg-simplify.cabal
.github/workflows/: ci.yml
src/: Main.hs  Simplify.hs  Svg.hs
