name:                svg-simplify
version:             0.1.0.0
homepage:            https://github.com/githubuser/svg-simplify#readme
license:             BSD3
license-file:        LICENSE
author:              Yair Chuchem
maintainer:          yairchu at gmail
copyright:           2020 Yair Chuchem
category:            Graphics, Web, Svg
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable svg-simplify
  hs-source-dirs:      src
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:
    Paths_svg_simplify,
    Simplify
  build-depends:
    base >= 4.7 && < 5,
    lens,
    optparse-applicative,
    pretty-simple,
    svg-tree
